<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/orangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/orangeButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addOrange"/>

    <Button
        android:id="@+id/mangoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mangoButtonLabel"
        app:layout_constraintStart_toEndOf="@+id/orangeButton"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addMango"/>

    <Button
        android:id="@+id/appleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/appleButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orangeButton"
        android:onClick="addApple"/>

    <Button
        android:id="@+id/pineapleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pineapleButtonLabel"
        app:layout_constraintStart_toEndOf="@+id/appleButton"
        app:layout_constraintTop_toBottomOf="@+id/mangoButton"
        android:onClick="addPineaple"/>

    <Button
        android:id="@+id/riceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/riceButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appleButton"
        android:onClick="addRice"/>

    <Button
        android:id="@+id/bananaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bananaButtonLabel"
        app:layout_constraintStart_toEndOf="@+id/riceButton"
        app:layout_constraintTop_toBottomOf="@+id/pineapleButton"
        android:onClick="addBanana"/>

    <Button
        android:id="@+id/tomatoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tomatoButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riceButton"
        android:onClick="addTomato"/>

    <Button
        android:id="@+id/potatoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/potatoButtonLabel"
        app:layout_constraintStart_toEndOf="@+id/tomatoButton"
        app:layout_constraintTop_toBottomOf="@+id/bananaButton"
        android:onClick="addPotato"/>

    <Button
        android:id="@+id/beanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/beanButtonLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomatoButton"
        android:onClick="addBean"/>

    <Button
        android:id="@+id/cheeseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cheeseButtonLabel"
        app:layout_constraintStart_toEndOf="@+id/beanButton"
        app:layout_constraintTop_toBottomOf="@+id/potatoButton"
        android:onClick="addCheese"/>

</android.support.constraint.ConstraintLayout>